<resources>
    <string name="app_name">FoodFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_desc_location">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_location">Lokasi</string>
    <string name="text_tambahkan_ke_keranjang_28_000">Tambahkan ke Keranjang - 28.000</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Keranjang</string>
    <string name="title_tab_profile">Profil</string>
    <string name="text_title_your_cart">Keranjang Anda</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_hint_notes">Tulis notes disini</string>
    <string name="text_title_order_confirmation">Konfirmasi Pesanan</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Ambil Sendiri</string>
    <string name="text_delivery">Dikirim</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="total_item_price">Total Pembayaran</string>
    <string name="text_title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="text_log_in">Log In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="login">Login</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading">Loading</string>
    <string name="back_button">back button</string>
    <string name="edit_button">edit button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="food_image">Food Image</string>
    <string name="remove_cart_button">remove cart button</string>
    <string name="list_makanan">List Makanan</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="hi_resya">Hi, Resya</string>
    <string name="mau_makan_apa_kamu_hari_ini">Mau makan apa kamu hari ini?</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="pesan_makananmu_di_aplikasi_dan_dapatkan_diskon">Pesan makananmu di aplikasi dan dapatkan diskon</string>\
    <string name="add_to_cart_button">Tambahkan ke Keranjang - %1$s</string>
</resources>