<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.checkout.CheckoutActivity">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_title_order_confirmation" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_action_bar"
        android:background="@color/grey_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_delivery_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_delivery_method"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_delivery_method" />

                    <RadioGroup
                        android:id="@+id/rg_delivery_method"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:checkedButton="@+id/rb_delivery"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/rb_pick_up"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_pick_up"
                            android:textColor="@drawable/selector_toogle_text_color" />
                        <RadioButton
                            android:id="@+id/rb_delivery"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_delivery"
                            android:textColor="@drawable/selector_toogle_text_color" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_cart" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_payment_method"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_payment_method" />

                    <RadioGroup
                        android:id="@+id/rg_payment_method"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:checkedButton="@+id/rb_e_wallet"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_cash"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_cash"
                            android:textColor="@drawable/selector_toogle_text_color" />

                        <RadioButton
                            android:id="@+id/rb_e_wallet"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_e_wallet"
                            android:textColor="@drawable/selector_toogle_text_color" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_shopping_summary"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_shopping_summary"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/shopping_summary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tv_total_item_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total_item_price" />

                        <TextView
                            android:id="@+id/tv_total_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            tools:text="IDR 20.000.000" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_checkout"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>